--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==0.11.0
 alembic==1.4.3
 argcomplete==1.10.0
+astor==0.8.1
 astunparse==1.6.3
 beautifulsoup4==4.8.0
 cachetools==4.1.1
@@ -28,6 +29,7 @@ importlib-metadata==3.1.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Keras==2.4.3
+Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 lxml==4.6.2
 Mako==1.1.3
@@ -59,11 +61,14 @@ sortedcontainers==2.3.0
 soupsieve==2.0.1
 SpeechRecognition==3.8.1
 SQLAlchemy==1.3.20
+tb-nightly==1.14.0a20190301
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
+tensorflow-hub==0.10.0
 termcolor==1.1.0
+tf-estimator-nightly==1.14.0.dev2019030115
 tzlocal==1.5.1
 urllib3==1.26.2
 visitor==0.1.3
