--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -15,6 +15,7 @@ extract-msg==0.23.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.5.3
+flask-script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.2
 gast==0.3.3
