--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -11,6 +11,7 @@ Click==7.0
 docx2txt==0.8
 dominate==2.4.0
 EbookLib==0.17.1
+en-core-web-lg==2.3.1
 extract-msg==0.23.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
@@ -19,6 +20,7 @@ flask-script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.2
 gast==0.3.3
+gensim==3.8.3
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
@@ -36,6 +38,7 @@ lxml==4.6.2
 Mako==1.1.3
 Markdown==3.3.3
 MarkupSafe==1.1.1
+nltk==3.5
 numpy==1.18.5
 oauthlib==3.1.0
 olefile==0.46
@@ -60,6 +63,7 @@ scipy==1.5.4
 six==1.12.0
 sortedcontainers==2.3.0
 soupsieve==2.0.1
+spacy==2.3.4
 SpeechRecognition==3.8.1
 SQLAlchemy==1.3.20
 tb-nightly==1.14.0a20190301
