--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -3,20 +3,25 @@ alembic==1.4.3
 argcomplete==1.10.0
 astor==0.8.1
 astunparse==1.6.3
+Babel==2.9.0
 beautifulsoup4==4.8.0
+blis==0.7.3
 cachetools==4.1.1
+catalogue==1.0.0
 certifi==2020.11.8
 chardet==3.0.4
 Click==7.0
+cymem==2.0.5
 docx2txt==0.8
 dominate==2.4.0
 EbookLib==0.17.1
-https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.3.1/en_core_web_lg-2.3.1.tar.gz#egg=en_core_web_lg==2.3.1
+en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.3.1/en_core_web_lg-2.3.1.tar.gz
 extract-msg==0.23.1
 Flask==1.1.1
+Flask-Babel==2.0.0
 Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.5.3
-flask-script==2.0.6
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.2
 gast==0.3.3
@@ -31,6 +36,7 @@ IMAPClient==2.1.0
 importlib-metadata==3.1.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+joblib==0.17.0
 Keras==2.4.3
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
@@ -38,6 +44,7 @@ lxml==4.6.2
 Mako==1.1.3
 Markdown==3.3.3
 MarkupSafe==1.1.1
+murmurhash==1.0.5
 nltk==3.5
 numpy==1.18.5
 oauthlib==3.1.0
@@ -46,6 +53,8 @@ opt-einsum==3.3.0
 pandas==1.1.4
 pdfminer.six==20181108
 Pillow==8.0.1
+plac==1.1.3
+preshed==3.0.4
 protobuf==3.14.0
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
@@ -56,16 +65,19 @@ python-editor==1.0.4
 python-pptx==0.6.18
 pytz==2020.4
 PyYAML==5.3.1
+regex==2020.11.13
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
 scipy==1.5.4
 six==1.12.0
+smart-open==4.0.1
 sortedcontainers==2.3.0
 soupsieve==2.0.1
 spacy==2.3.4
 SpeechRecognition==3.8.1
 SQLAlchemy==1.3.20
+srsly==1.0.4
 tb-nightly==1.14.0a20190301
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
@@ -74,9 +86,12 @@ tensorflow-estimator==2.3.0
 tensorflow-hub==0.10.0
 termcolor==1.1.0
 tf-estimator-nightly==1.14.0.dev2019030115
+thinc==7.4.3
+tqdm==4.54.1
 tzlocal==1.5.1
 urllib3==1.26.2
 visitor==0.1.3
+wasabi==0.8.0
 Werkzeug==0.16.0
 wrapt==1.12.1
 WTForms==2.3.3
