--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==0.11.0
 alembic==1.4.3
+antlr4-python3-runtime==4.8
 argcomplete==1.10.0
 astor==0.8.1
 astunparse==1.6.3
@@ -9,14 +10,19 @@ blis==0.7.3
 cachetools==4.1.1
 catalogue==1.0.0
 certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
 Click==7.0
 cymem==2.0.5
+Cython==0.29.21
+dataclasses==0.6
 docx2txt==0.8
 dominate==2.4.0
 EbookLib==0.17.1
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.3.1/en_core_web_lg-2.3.1.tar.gz
 extract-msg==0.23.1
+fairseq==0.10.1
+fastBPE==0.1.0
 Flask==1.1.1
 Flask-Babel==2.0.0
 Flask-Bootstrap==3.3.7.1
@@ -24,6 +30,7 @@ Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.2
+future==0.18.2
 gast==0.3.3
 gensim==3.8.3
 google-auth==1.23.0
@@ -31,9 +38,11 @@ google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
 grpcio==1.33.2
 h5py==2.10.0
+hydra-core==1.0.4
 idna==2.10
 IMAPClient==2.1.0
 importlib-metadata==3.1.0
+importlib-resources==3.3.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 joblib==0.17.0
@@ -49,16 +58,19 @@ nltk==3.5
 numpy==1.18.5
 oauthlib==3.1.0
 olefile==0.46
+omegaconf==2.0.5
 opt-einsum==3.3.0
 pandas==1.1.4
 pdfminer.six==20181108
 Pillow==8.0.1
 plac==1.1.3
+portalocker==2.0.0
 preshed==3.0.4
 protobuf==3.14.0
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.20
 pycryptodome==3.9.9
 python-dateutil==2.8.1
 python-editor==1.0.4
@@ -69,6 +81,8 @@ regex==2020.11.13
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
+sacrebleu==1.4.14
+sacremoses==0.0.43
 scipy==1.5.4
 six==1.12.0
 smart-open==4.0.1
@@ -78,16 +92,20 @@ spacy==2.3.4
 SpeechRecognition==3.8.1
 SQLAlchemy==1.3.20
 srsly==1.0.4
+subword-nmt==0.3.7
 tb-nightly==1.14.0a20190301
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
 tensorflow-hub==0.10.0
+tensorflow-text==2.3.0
 termcolor==1.1.0
 tf-estimator-nightly==1.14.0.dev2019030115
 thinc==7.4.3
+torch==1.7.0
 tqdm==4.54.1
+typing-extensions==3.7.4.3
 tzlocal==1.5.1
 urllib3==1.26.2
 visitor==0.1.3
