--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -77,6 +77,7 @@ python-editor==1.0.4
 python-pptx==0.6.18
 pytz==2020.4
 PyYAML==5.3.1
+rake-nltk==1.0.4
 regex==2020.11.13
 requests==2.25.0
 requests-oauthlib==1.3.0
