--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "env/lib/python"
+  "python.pythonPath": "C:\\Users\\Miko Planas\\Anaconda3\\envs\\omdena-iss\\python.exe"
 }
