--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -59,6 +59,7 @@ pandas==1.1.4
 pdfminer.six==20181108
 Pillow==8.0.1
 plac==1.1.3
+plotly==4.10.0
 portalocker==2.0.0
 preshed==3.0.4
 protobuf==3.14.0
