--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -96,7 +96,7 @@ tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
 tensorflow-hub==0.10.0
-tensorflow-text==2.3.0
+# tensorflow-text==2.3.0
 termcolor==1.1.0
 tf-estimator-nightly==1.14.0.dev2019030115
 thinc==7.4.3
