--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -16,11 +16,13 @@ Click==7.0
 cymem==2.0.5
 Cython==0.29.21
 dataclasses==0.6
+decorator==4.4.2
 docx2txt==0.8
 dominate==2.4.0
 EbookLib==0.17.1
-en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.3.1/en_core_web_lg-2.3.1.tar.gz
+en-core-web-lg==2.3.1
 extract-msg==0.23.1
+filelock==3.0.12
 Flask==1.1.1
 Flask-Babel==2.0.0
 Flask-Bootstrap==3.3.7.1
@@ -44,17 +46,20 @@ importlib-resources==3.3.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 joblib==0.17.0
+Keras-Preprocessing==1.1.2
 lxml==4.6.2
 Mako==1.1.3
 Markdown==3.3.3
 MarkupSafe==1.1.1
 murmurhash==1.0.5
+networkx==2.5
 nltk==3.5
 numpy==1.18.5
 oauthlib==3.1.0
 olefile==0.46
 omegaconf==2.0.5
 opt-einsum==3.3.0
+packaging==20.8
 pandas==1.1.4
 pdfminer.six==20181108
 Pillow==8.0.1
@@ -68,7 +73,9 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pycryptodome==3.9.9
+pyparsing==2.4.7
 python-dateutil==2.8.1
+python-docx==0.8.10
 python-editor==1.0.4
 python-pptx==0.6.18
 pytz==2020.4
@@ -77,11 +84,14 @@ rake-nltk==1.0.4
 regex==2020.11.13
 requests==2.25.0
 requests-oauthlib==1.3.0
+retrying==1.3.3
 rsa==4.6
 sacrebleu==1.4.14
 sacremoses==0.0.43
+scikit-learn==0.23.2
 scipy==1.5.4
 six==1.12.0
+sklearn==0.0
 smart-open==4.0.1
 sortedcontainers==2.3.0
 soupsieve==2.0.1
@@ -100,7 +110,10 @@ tensorflow-text==2.3.0
 termcolor==1.1.0
 tf-estimator-nightly==1.14.0.dev2019030115
 thinc==7.4.3
+threadpoolctl==2.1.0
+tokenizers==0.9.4
 tqdm==4.54.1
+transformers==4.0.1
 typing-extensions==3.7.4.3
 tzlocal==1.5.1
 urllib3==1.26.2
@@ -112,5 +125,3 @@ WTForms==2.3.3
 xlrd==1.2.0
 XlsxWriter==1.3.7
 zipp==3.4.0
-transformers==4.0.1
-python-docx==0.8.10
