--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -113,7 +113,6 @@ thinc==7.4.3
 threadpoolctl==2.1.0
 tokenizers==0.9.4
 tqdm==4.54.1
-transformers==4.0.1
 typing-extensions==3.7.4.3
 tzlocal==1.5.1
 urllib3==1.26.2
@@ -125,3 +124,7 @@ WTForms==2.3.3
 xlrd==1.2.0
 XlsxWriter==1.3.7
 zipp==3.4.0
+transformers==2.2.2
+neuralcoref
+bert-extractive-summarizer
+sentencepiece
