--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -4,19 +4,34 @@ antlr4-python3-runtime==4.8
 argcomplete==1.10.0
 astor==0.8.1
 astunparse==1.6.3
+attrs==20.3.0
+awsebcli==3.19.2
 Babel==2.9.0
+bcrypt==3.2.0
 beautifulsoup4==4.8.0
+bert-extractive-summarizer==0.5.1
+blessed==1.17.12
 blis==0.7.3
+boto3==1.16.39
+botocore==1.19.39
+cached-property==1.5.2
 cachetools==4.1.1
 catalogue==1.0.0
+cement==2.8.2
 certifi==2020.11.8
 cffi==1.14.4
 chardet==3.0.4
 Click==7.0
+colorama==0.4.3
+cryptography==3.3.1
 cymem==2.0.5
 Cython==0.29.21
 dataclasses==0.6
 decorator==4.4.2
+docker==4.4.0
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
 docx2txt==0.8
 dominate==2.4.0
 EbookLib==0.17.1
@@ -30,7 +45,7 @@ Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.2
-future==0.18.2
+future==0.16.0
 gast==0.3.3
 gensim==3.8.3
 google-auth==1.23.0
@@ -45,7 +60,9 @@ importlib-metadata==3.1.0
 importlib-resources==3.3.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+jmespath==0.10.0
 joblib==0.17.0
+jsonschema==3.2.0
 Keras-Preprocessing==1.1.2
 lxml==4.6.2
 Mako==1.1.3
@@ -53,6 +70,7 @@ Markdown==3.3.3
 MarkupSafe==1.1.1
 murmurhash==1.0.5
 networkx==2.5
+neuralcoref==4.0
 nltk==3.5
 numpy==1.18.5
 oauthlib==3.1.0
@@ -61,6 +79,8 @@ omegaconf==2.0.5
 opt-einsum==3.3.0
 packaging==20.8
 pandas==1.1.4
+paramiko==2.7.2
+pathspec==0.5.9
 pdfminer.six==20181108
 Pillow==8.0.1
 plac==1.1.3
@@ -73,7 +93,9 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pycryptodome==3.9.9
+PyNaCl==1.4.0
 pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-docx==0.8.10
 python-editor==1.0.4
@@ -82,14 +104,17 @@ pytz==2020.4
 PyYAML==5.3.1
 rake-nltk==1.0.4
 regex==2020.11.13
-requests==2.25.0
+requests==2.24.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.6
+s3transfer==0.3.3
 sacrebleu==1.4.14
 sacremoses==0.0.43
 scikit-learn==0.23.2
 scipy==1.5.4
+semantic-version==2.5.0
+sentencepiece==0.1.94
 six==1.12.0
 sklearn==0.0
 smart-open==4.0.1
@@ -108,23 +133,24 @@ tensorflow-estimator==2.3.0
 tensorflow-hub==0.10.0
 tensorflow-text==2.3.0
 termcolor==1.1.0
+texttable==1.6.3
 tf-estimator-nightly==1.14.0.dev2019030115
 thinc==7.4.3
 threadpoolctl==2.1.0
 tokenizers==0.9.4
+torch==1.7.1
 tqdm==4.54.1
+transformers==4.1.1
 typing-extensions==3.7.4.3
 tzlocal==1.5.1
-urllib3==1.26.2
+urllib3==1.25.11
 visitor==0.1.3
 wasabi==0.8.0
+wcwidth==0.1.9
+websocket-client==0.57.0
 Werkzeug==0.16.0
 wrapt==1.12.1
 WTForms==2.3.3
 xlrd==1.2.0
 XlsxWriter==1.3.7
 zipp==3.4.0
-transformers==2.2.2
-neuralcoref
-bert-extractive-summarizer
-sentencepiece
