--- a/Task_6/.gitignore
+++ b/Task_6/.gitignore
@@ -1,1 +1,8 @@
+env
+**/__pycache__/
+**/.DS_Store
 config.py
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
