--- a/Task_6/requirements.txt
+++ b/Task_6/requirements.txt
@@ -35,7 +35,7 @@ docopt==0.6.2
 docx2txt==0.8
 dominate==2.4.0
 EbookLib==0.17.1
-en-core-web-lg==2.3.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz
 extract-msg==0.23.1
 filelock==3.0.12
 Flask==1.1.1
